# SmartCalc

./: README.md
src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  s21_calc.c  s21_calc.h  s21_credit.c  s21_deposit.c  s21_graph.cpp  s21_graph.h  s21_graph.ui  s21_linked_list.c  s21_polish_notation.c  s21_validator.c
src/tests/: s21_test.c  s21_test.h  test.c
